syntax = "proto3";

package CoverTree;

message NodeProto {
  uint64 cover_count = 1;
  uint64 center_index = 2;
  bool is_leaf = 3;
  int32 nested_scale_index = 4;
  repeated uint64 children_point_indexes = 5;
  repeated int32 children_scale_indexes = 6;
  repeated uint64 outlier_point_indexes = 7;
  string outlier_summary_json = 8;
  float radius = 9;
}

message LayerProto {
  int32 scale_index = 1;
  repeated NodeProto nodes = 2;
}

message CoreProto {
  bool use_singletons = 1;
  float scale_base = 2;
  uint64 cutoff = 3;
  sint32 resolution = 4;

  uint64 dim = 7;
  uint64 count = 8;

  int32 root_scale = 9;
  uint64 root_index = 10;

  repeated LayerProto layers = 11;
}